Some changes to the intro.

--- a/acl17-latex/wild-card-robo-nlp.tex
+++ b/acl17-latex/wild-card-robo-nlp.tex
@@ -59,13 +59,17 @@ Despite that the utterance made no reference to the addressee as the agent of so
 
 We explore this question using the Cards Corpus, a corpus of transcripts from a game in which pairs of players must collaboratively collect cards scattered on a gameboard. The Cards Corpus- is optimal for questions of this sort, because it records both the actions taken and the utterances made during the course of a game. Where commands are concerned, we can observe who acts in response to an utterance, and test hypotheses about the discourse conditions surrounding an utterance-action exchange.
 
-In a first study, we examine the distribution of three classes of commands---imperative, non-locative performative, and locative---surrounding a fixed set of common actions taken in the Cards game. We find that while the imperative strategy 
-is globally the most prominent, the locative command strategy predominates for a very specific subset of actions. For example, when a player says ``The two of hearts is located in the top right corner" and intends that her game partner act on that information by fetching the card in question.
+In a first study, we examine the distribution of three classes of commands---imperative, non-locative performative, and locative---surrounding a fixed set of common actions taken in the Cards game. We find that for most actions the imperative strategy 
+is the most prominent, but that the locative command strategy predominates for a very specific subset of actions. For example, when a player says ``The two of hearts is located in the top right corner" and intends that her game partner act on that information by fetching the card in question.
 
-These locative constructions are inherently ambiguous between command interpretations versus simple declaratives contributing new information to a discourse. In a second Cards game study, we demonstrate that this ambiguity is resolved by features of the \textit{common ground}: here, the state of a game as reflected by the utterances made by both players up to a specific point in time. We point out several strong regressors associated with addressee follow-up action, and hence with the contextual interpretation of locatives as commands.
+Whether these locative constructions are to be interpreted as commands is ambiguous. In a second Cards game study, we demonstrate that this ambiguity is resolved by features of the \textit{common ground}: here, the state of a game as reflected by the utterances made by both players up to a specific point in time. We describe regressors of addressee follow-up action, and hence of the contextual interpretation of locatives as commands.
 
 These results agree with other research demonstrating that natural language understanding in embodied, multi-agent settings is heavily context-dependent. 
 It remains to be seen how such pragmatic reasoning might be integrated into a more complete model of embodied speech production.
+
+\section{Related Work}
+
+
 
 
 \end{document}
